Converting admin Intersection controller to use org ID